--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ body {
 .buy-now-backdrop {
     opacity: 1;
     position: fixed;
-    top: 0;
+    top: 50px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -119,6 +119,10 @@ body {
       visibility: hidden;
       pointer-events: none;
   }  
+  .buy-now-modal-close-icon {
+    width: 12px;
+    height: 12px;
+  }
     .buy-now-form-modal-window-header {
        font-family: var(--main-font-family);
        font-style: normal;
@@ -310,8 +314,8 @@ body {
   
     .buy-now-modal-class-button {
         position: absolute;
-        top: 24px;
-        right: 24px;
+        top: 20px;
+        right: 20px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -319,11 +323,8 @@ body {
         height: 24px;
         padding: 0;
         background-color: transparent;
-        border-radius: 50%;
-        background-color: #e7e9fc;
-        border: 1px solid rgba(0, 0, 0, 0.1);
+        border: none;
         cursor: pointer;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 }
