--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,13 @@ body {
      margin-right: 8px;
     
     }
+    .icon-bank {
+      position: absolute;
+      width: 32px;
+      height: 21px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
   
     .buy-now-modal-class-button {
         position: absolute;
