--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body {
     pointer-events: auto;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) {
     .buy-now-modal {
         position: absolute;
         top: 50%;
