--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ body {
 .buy-now-backdrop {
     opacity: 1;
     position: fixed;
-    top: 50px;
+    top: 100px;
     left: 0;
     width: 100%;
     height: 100%;
@@ -113,6 +113,7 @@ body {
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         padding: 32px 24px 32px 24px;
         pointer-events: auto;
+        overflow: auto;
     }
     .is-hidden {
       opacity: 0;
