--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,6 @@ body {
     visibility: visible;
     pointer-events: auto;
     overflow: auto;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @media screen and (min-width: 320px) {
     .buy-now-modal {
@@ -108,13 +107,13 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
         width: 100%;
+        height: 100%;
         background-color: #FAFAFA;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 14px;
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         padding: 32px 24px 32px 24px;
         pointer-events: auto;
-        overflow: auto; 
     }
     .is-hidden {
       opacity: 0;
