--- a/css/style.css
+++ b/css/style.css
@@ -83,22 +83,19 @@ body {
 
 /* start */
 
-.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-}  
+
 .buy-now-backdrop {
     opacity: 1;
     position: fixed;
-    top: 100px;
-    left: 0;
+    top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     visibility: visible;
     pointer-events: auto;
-    overflow: auto;
+    
 }
 @media screen and (min-width: 320px) {
     .buy-now-modal {
@@ -111,9 +108,9 @@ body {
         background-color: #FAFAFA;
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 14px;
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         padding: 32px 24px 32px 24px;
         pointer-events: auto;
+        overflow: auto; 
     }
     .is-hidden {
       opacity: 0;
@@ -339,28 +336,49 @@ body {
 }
 
 @media screen and (min-width: 375px) and (max-width: 767px) {
-    .buy-now-modal {
-        position: absolute;
-        width: 375px;
-        min-height: 584px;
-        padding: 32px 24px 32px 24px;
-        }
+  .buy-now-modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: #FAFAFA;
+    border-radius: 14px;
+    padding: 32px 24px 32px 24px;
+    pointer-events: auto;
+    overflow: auto; 
+}
 }
 
 @media screen and (min-width: 767px) and (max-width: 1199px) {
   .buy-now-modal {
     position: absolute;
-    width: 768px;
-    min-height: 584px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: #FAFAFA;
+    border-radius: 14px;
     padding: 32px 24px 32px 24px;
-    }
+    pointer-events: auto;
+    overflow: auto; 
+}
 }
 
 @media screen and (min-width: 1200px) {
   .buy-now-modal {
     position: absolute;
-    width: 1200px;
-    min-height: 584px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-color: #FAFAFA;
+    border-radius: 14px;
     padding: 32px 24px 32px 24px;
-    }
+    pointer-events: auto;
+    overflow: auto; 
+}
 }
