--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
+    width: 375px;
     height: 100%;
     background-color: #FAFAFA;
     border-radius: 14px;
@@ -357,7 +357,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
+    width: 768px;
     height: 100%;
     background-color: #FAFAFA;
     border-radius: 14px;
@@ -373,7 +373,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
+    width: 1200px;
     height: 100%;
     background-color: #FAFAFA;
     border-radius: 14px;
