--- a/css/style.css
+++ b/css/style.css
@@ -84,20 +84,18 @@ body {
 /* start */
 
 
-.buy-now-backdrop {
+    .buy-now-backdrop {
     opacity: 1;
     position: fixed;
     top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     visibility: visible;
     pointer-events: auto;
-    
-}
-@media screen and (min-width: 320px) {
+    }
     .buy-now-modal {
         position: absolute;
         top: 50%;
@@ -143,7 +141,7 @@ body {
     }
     .buy-now-form-modal-window-row {
         width: 100%;
-        height: 83px;
+        height: 85px;
         display: flex;
         justify-content: space-between;
         border: 1px solid rgba(17, 17, 17, 0.1);
@@ -250,6 +248,7 @@ body {
       border: 1.5px solid rgba(17, 17, 17, 0.05);
       filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
       border-radius: 8px;
+      background-color:#FAFAFA;
       outline: transparent;
       resize: none;
     }
@@ -317,7 +316,6 @@ body {
       transform: translateY(-50%);
       right: 14px;
     }
-  
     .buy-now-modal-class-button {
         position: absolute;
         top: 20px;
@@ -333,52 +331,17 @@ body {
         cursor: pointer;
     }
 
-}
 
-@media screen and (min-width: 375px) and (max-width: 767px) {
+@media screen and (min-width: 320px) {
   .buy-now-modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 375px;
-    height: 100%;
-    background-color: #FAFAFA;
-    border-radius: 14px;
-    padding: 32px 24px 32px 24px;
-    pointer-events: auto;
-    overflow: auto; 
+    width: 311px;
 }
 }
 
-@media screen and (min-width: 767px) and (max-width: 1199px) {
+/* table */
+@media screen and (min-width: 767px)  {
   .buy-now-modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 768px;
-    height: 100%;
-    background-color: #FAFAFA;
-    border-radius: 14px;
-    padding: 32px 24px 32px 24px;
-    pointer-events: auto;
-    overflow: auto; 
+    width: 609px;
 }
 }
 
-@media screen and (min-width: 1200px) {
-  .buy-now-modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 1200px;
-    height: 100%;
-    background-color: #FAFAFA;
-    border-radius: 14px;
-    padding: 32px 24px 32px 24px;
-    pointer-events: auto;
-    overflow: auto; 
-}
-}
