--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,7 @@ body {
       border: 1.5px solid rgba(17, 17, 17, 0.05);
       filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
       border-radius: 8px;
-      background-color:#FAFAFA;
+      background-color: transparent;
       outline: transparent;
       resize: none;
     }
