--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ body {
         color: var(--primary-text-color-theme-light);
         text-align: center;
     }
-    .modal-contact-form {
+    .buy-now-modal-contact-form {
         width: 100%;
       padding-top: 32px ;
     }
